--- a/CHANGES
+++ b/CHANGES
@@ -4,17 +4,20 @@ python-powerdns - PowerDNS web api python client and interface
 Contact: Denis 'jawa' Pompilio <denis.pompilio@gmail.com>
 Sources: https://github.com/outini/python-powerdns
 
+=== v1.0.0 01/06/2021 ===
+    * feat(interface.py): Add a notify() method for DNS zones notification
+
 === v0.2.5 08/10/2018 ===
-    * fix(interfaces.py): Allow list and not just tuple as a record type
+    * fix(interface.py): Allow list and not just tuple as a record type
 
 === v0.2.4 08/10/2018 ===
-    * fix(interfaces.py): rename method
+    * fix(interface.py): rename method
 
 === v0.2.3 02/10/2018 ===
-    * feat(interfaces.py): Add update to deal with PDNS field
+    * feat(interface.py): Add update to deal with PDNS field
 
 === v0.2.2 10/09/2018 ===
-    * fix(interfaces.py): fix get_record method
+    * fix(interface.py): fix get_record method
 
 === v0.2.1 19/06/2018 ===
     * Setup script improvement for PyPi publication
