--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@ python-powerdns - PowerDNS web api python client and interface
 Contact: Denis 'jawa' Pompilio <denis.pompilio@gmail.com>
 Sources: https://github.com/outini/python-powerdns
 
+=== v2.0.0 15/06/2021 ===
+    * feat(interface.py): Add support for RRset comments
+
 === v1.0.0 01/06/2021 ===
     * feat(interface.py): Add a notify() method for DNS zones notification
 
